Treatment of Critical warnings related to the use of code marked for removal